--- a/test/testdata/testdata.qrc
+++ b/test/testdata/testdata.qrc
@@ -22,5 +22,6 @@
         <file>object/required-clause.json</file>
         <file>object/properties-clause-group.json</file>
         <file>object/dependencies-clause.json</file>
+        <file>object/propertyNames-clause.json</file>
     </qresource>
 </RCC>
